# minicloze

./: .gitignore  Cargo.toml  README.md  learn-tibetan.sh  learn.sh  vercel.json  web.sh  webctl.sh
minicloze-cli/: Cargo.toml
minicloze-cli/src/: main.rs
minicloze-lib/: Cargo.toml  README.md
minicloze-lib/corpora/: README.md  mongolian_a1.json  mongolian_a1_vocab.json  tibetan_a1.json  tibetan_a1_explanations.json  tibetan_a1_vocab.json
minicloze-lib/src/: game.rs  langs.rs  lib.rs  local_corpora.rs  sentence.rs  srs.rs  tibetan.rs  tokenizer.rs
minicloze-web/: Cargo.toml
minicloze-web/src/: main.rs
minicloze-web/static/: app.css  app.js  index.html  manifest.webmanifest  service-worker.js
minicloze-web/static/data/: mongolian_a1_explanations.json  tibetan_a1_explanations.json  tibetan_a1_tokens.json
scripts/: build_static_web_data.py  generate_mongolian_explanations.mjs  merge_a1_corpora.py  tibetan-python-env.sh
